fixed a syntax error in the html.erb

--- a/app/views/pictures/picture0.html.erb
+++ b/app/views/pictures/picture0.html.erb
@@ -1,4 +1,2 @@
-<% @pictures.each do |pic| %>
-  <p><%= pic[:emotion] %></p>
-  <img src="<%= pic[:url] %>">
-<% end %>
+  <p><%= @picture[:emotion] %></p>
+  <img src="<%= @picture[:url] %>">
