--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,3 +1,5 @@
 <h2><%= @picture[:emotion] %></h2>
 
-<img src="<%= @picture[:url] %>">
+<%= image_tag @picture.url %>
+
+<%= link_to "All dem gifs", pictures_url %>
