--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -2,4 +2,4 @@
 
 <%= image_tag @picture.url %>
 
-<%= link_to "All dem gifs", pictures_url %> | <%= link_to "Fix dis GIF", edit_picture_path(@picture) %>
+<p><%= link_to "All dem gifs", pictures_url %> | <%= link_to "Fix dis GIF", edit_picture_path(@picture) %> | <%= link_to "Nuke this gif", @picture, :confirm => "Woah. That's harsh. For srs?", :method => :delete %></p>
